--- a/css/header-footer.css
+++ b/css/header-footer.css
@@ -1,46 +1,54 @@
 #idheader {
-    background-color: #5c5858d3; 
-    color: #fff; 
-    padding: 5%;
-  }
-    
-#nav-bar {
-    display: flex;
-    background-color: none;
-    justify-content:space-around;
-    align-items: center;
+    background-color: #afeeee; /* Cambia el color de fondo según tus preferencias */
+    color: #fff;
+    padding: 20px; /* Añade espacio alrededor del contenido */
+    text-align: center; /* Centra el texto */
 }
 
-#idheader.dark-mode-button {
+#nav-bar {
+    background-color: #e0ffff;
     display: flex;
-    position: fixed;
-    background-color: #333;
-    position: fixed; 
+    justify-content: space-around;
+    align-items: center;
+    padding: 10px 0; /* Espacio entre los elementos del menú */
+}
+
+#nav-bar a {
+    color: #000000;
+    text-decoration: none;
+    margin: 0 10px;
+    font-weight: bold;
+    font-size: 18px; /* Tamaño de fuente más grande */
+    font-family: 'Arial', sans-serif; /* Cambia la fuente según tus preferencias */
+}
+
+#dark-mode-button {
+    background-color: #fcf7f7;
     color: #fff;
-    border-radius: 25px;
+    border: none;
     padding: 10px 20px;
-    width: 100px;
-    height: 30px;
     cursor: pointer;
+    font-size: 16px;
+    border-radius: 5px;
+}
+
+#dark-mode-button:hover {
+    background-color: #7a7777;
+}
+#idfooter {
+    background-color:  #000000;
+    color: white;
+    text-align: center;
+    padding: 15px;
 }
 
 .redsoc {
-    width: 20 em;
-    height: 20 em;
-    background-color: none;
+    display: flex;
+    justify-content: center;
+    gap: 20px; /* Ajusté el espacio entre los iconos */
 }
 
-#idfooter {
-    background-color:  #5c5858d3;
-    color: white;
-    text-align: center;
-    font-size: 12px;
-    padding: 15px;
-    width: 100%;
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    /*padding: 20px;*/
-    height: 75 em;
-    margin-top: 0; /*10px;*/
-  }
+.redsoc img {
+    width: 30px;
+    height: 30px;
+}
