--- a/css/contacto.css
+++ b/css/contacto.css
@@ -1,13 +1,169 @@
-/* .warnings {
+
+
+body {
+    
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    margin: 0;
+}
+
+header, footer {
+    flex-shrink: 0;
+}
+
+main {
+    flex-grow: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+form {
+    width: 350px;
+    text-align: center;
+}
+
+.consulta {
+    text-align: left;
+}
+
+.consulta textarea {
+    width: 100%;
+}
+
+button[type="submit"], input[type="reset"] {
+    margin-top: 10px;
+}
+
+footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+footer a {
+    margin: 0 10px;
+}
+input, select {
+    vertical-align: middle;
+}
+
+
+
+
+.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+#nav-bar {
+    background-color: #000000;
+    color: #fff;
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#nav-bar a {
+    color: #fff;
+    text-decoration: none;
+    margin: 0 10px;
+    font-weight: bold;
+}
+
+button#dark-mode-button {
+    background-color: #555;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    font-size: 14px;
+    border-radius: 5px;
+}
+
+button#dark-mode-button:hover {
+    background-color: #444;
+}
+
+main {
+    text-align: center;
+}
+
+h1 {
+    font-size: 2em;
+    margin-bottom: 20px;
+    color: #000000;
+}
+
+input, select, textarea {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+button[type="submit"], input[type="reset"] {
+    background-color: #000000;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    font-size: 16px;
+    border-radius: 5px;
+}
+
+button[type="submit"]:hover, input[type="reset"]:hover {
+    background-color: #444;
+}
+
+#warnings {
+    color: #ff0000;
+    font-size: 14px;
+}
+
+#idfooter {
+    background-color: #333;
+    color: #fff;
+    padding: 10px;
+    text-align: center;
+}
+.redsoc {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.redsoc img {
+    width: 25px; 
+    height: 25px; 
+    margin: 0 5px;
+}
+
+.warnings {
     width: 200px;
     text-align: center;
     margin: auto;
-    color: #B06AB3;
+    color: rgb(187, 61, 61);
+    font-size: 14px; 
+    margin-top: 5px; 
     padding-top: 20px;
-} */
+} 
 
-.error {
-    color: red;
-    font-size: 14px; /* Adjust the font size as needed */
-    margin-top: 5px; /* Add spacing between the error message and the form elements */
+input:invalid{
+    border: 1px dashed rgb(187, 61, 61);
+}
+
+input:valid{
+    border: 1px solid;
 }
