--- a/css/header-footer.css
+++ b/css/header-footer.css
@@ -52,3 +52,14 @@
     width: 30px;
     height: 30px;
 }
+
+/* modo */
+body {
+    transition: background-color 2s color 2s;
+    font-family:  Arial, sans-serif;
+  }
+  
+.modo-oscuro {
+    background-color: #222222 ;
+    color: aliceblue
+  }
