--- a/css/contacto.css
+++ b/css/contacto.css
@@ -1,8 +1,38 @@
+body {
+    background-color: #000; 
+    color: #fff; 
+    margin: 0;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100vh;
+}
+#idheader {
+    width: 100%; /* Hace que el encabezado ocupe todo el ancho de la página */
+    background-color: #000; /* Cambia el color de fondo del encabezado */
+    color: #fff;
+    padding: 20px; 
+    text-align: center; 
+}
 
-
-form {
-    width: 350px;
+section {
     text-align: center;
+}
+
+#form {
+    background-color:  rgb(0, 0, 0);;
+    color: #f7f6f6; 
+    width: 350px;
+    margin: 0 auto;
+    text-align: center;
+
+}
+form label {
+    margin-bottom: 50px; 
+}
+.form-group {
+    margin: 20px 0; 
 }
 
 .consulta {
@@ -13,7 +43,27 @@ form {
     width: 100%;
 }
 
+.consulta-label {
+    font-family: 'Georgia', serif; 
+    font-size: 18px; 
+    color: #fff9f9; 
+    display: block; 
+    margin-bottom: 10px;
+}
 
+
+.form-group {
+    margin: 15px 0; 
+    text-align: center; 
+
+    .motivational-quote {
+        font-family: 'Georgia', serif; 
+        font-size: 20px; 
+        color: #fff; 
+        text-align: center; 
+        margin-top: 70px;
+    }
+}
 button[type="submit"]:hover, input[type="reset"]:hover {
     background-color: #444;
     margin-top: 10px;
@@ -35,4 +85,4 @@ input:invalid{
 
 input:valid{
     border: 1px solid;
-} 
+}
