--- a/css/sedes.css
+++ b/css/sedes.css
@@ -1,4 +1,7 @@
-
+body {
+    background-color: #000; 
+    color: #fff; 
+}
 .header-container h1 {
     font-family: 'Open Sans', sans-serif; 
     font-weight: 700; 
@@ -16,8 +19,8 @@
 }
 
 .cuadrito {
-    background-color: black;
-    color: whitesmoke;
+    background-color: rgb(56, 54, 54);
+    color: rgb(248, 245, 245);
     border: 2px solid aliceblue;
     padding: 10px;
     text-align: center;
