--- a/css/contacto.css
+++ b/css/contacto.css
@@ -2,16 +2,15 @@ body {
     background-color: #000; 
     color: #fff; 
     margin: 0;
-    padding: 20px;
+    padding: 40px;
     display: flex;
     flex-direction: column;
     align-items: center;
     height: 100vh;
 }
 #idheader {
-    width: 100%; /* Hace que el encabezado ocupe todo el ancho de la página */
-    background-color: #000; /* Cambia el color de fondo del encabezado */
-    color: #fff;
+    width: 100%; 
+    background-color: #000; 
     padding: 20px; 
     text-align: center; 
 }
@@ -23,7 +22,7 @@ section {
 #form {
     background-color:  rgb(0, 0, 0);;
     color: #f7f6f6; 
-    width: 350px;
+    width: 500px;
     margin: 0 auto;
     text-align: center;
 
@@ -55,6 +54,7 @@ form label {
 .form-group {
     margin: 15px 0; 
     text-align: center; 
+}
 
     .motivational-quote {
         font-family: 'Georgia', serif; 
@@ -63,7 +63,6 @@ form label {
         text-align: center; 
         margin-top: 70px;
     }
-}
 button[type="submit"]:hover, input[type="reset"]:hover {
     background-color: #444;
     margin-top: 10px;
