--- a/css/home.css
+++ b/css/home.css
@@ -31,8 +31,9 @@ main {
 }
 
 .Título {
-    font-family: Georgia;
-    font size 24px;
+    font-family: 'Open Sans', sans-serif; 
+    font-weight: 700; 
+    font-size: 28px;
     text-align: center;  
   }
   
@@ -52,10 +53,11 @@ main {
       margin-right: 30%;
       justify-content: right;
       box-sizing: content-box;
-  
-  }
+      }
+
+
   .B1 {
-      width: 30%;
+      width: 50%;
       height: 200px;
       margin-bottom: 10px;
       margin: auto;
@@ -85,3 +87,12 @@ main {
       height: 20 em;
       background-color: none;
   }
+.B1:hover {
+ -webkit-transform:scale(1.3);
+ transform:scale(1.3);}
+
+ .B2:hover {
+    -webkit-transform:scale(1.3);
+    transform:scale(1.3);}
+.B1,.B2 {overflow:hidden;}
+
