--- a/css/nosotros.css
+++ b/css/nosotros.css
@@ -3,8 +3,9 @@ body {
   color: #fff;
 } 
 .Tittle {
-  font-family: Verdana, Geneva, Tahoma, sans-serif
-  font size 16px; 
+  font-family: 'Open Sans', sans-serif; 
+  font-weight: 700; 
+  font-size: 28px;
   text-align: center;
   padding: 5% 10%;
 }
@@ -16,21 +17,41 @@ body {
   padding:10px 5px
   
 }
-
-.Profes {
-  box-sizing: border-box;
-  justify-content:center;
+.Profesores {
   display: flex;
-  gap: 2rem;
-  padding: 10% 10% 10% 10%
-  margin: 0 auto;
-  max-width: 70rem;
-  width: 50%
-  
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-top: 100px;
 }
-.h1 {
-  text-align: cente;
+
+.Profe {
+flex:0 0 calc(33.33%-10px);
+margin-bottom: 20px;
+padding: 10px;
+box-sizing: border-box;
+border-radius: 1px  #ddd;
+text-align: center;
 }
+
+.Profe img {
+max-width: 100%;
+height: 300px; ; 
+}
+
+.img {
+width: 50%;
+box-shadow: 6px 6px 25px whitesmoke;
+transition: all 2s linear;
+
+}
+img:hover {
+  width: 70%;
+  border-radius: 10%;
+  filter:brightness(100%);
+  box-shadow: -12px --12px 12px gray;
+  filter: sepia(40%);
+}
+
 .comentario-card {
     background-color: #f5f5f5;
     padding: 10px;
