--- a/css/sedes.css
+++ b/css/sedes.css
@@ -1,6 +1,6 @@
 body {
-    background-color: #000; 
-    color: #fff; 
+    background-color: #d5e7f3; 
+    color: #1e0d5e; 
 }
 .header-container h1 {
     font-family: 'Open Sans', sans-serif; 
