--- a/css/home.css
+++ b/css/home.css
@@ -28,4 +28,10 @@ main {
     padding: 20px;
 }
 
+.Titulo {
+    font-family: 'Open Sans', sans-serif; 
+    font-weight: 700; 
+    font-size: 28px;
+    text-align: center;
+}
 
