--- a/css/nosotros.css
+++ b/css/nosotros.css
@@ -2,7 +2,56 @@ body {
   background-color: #d5e7f3; 
   color: #1e0d5e;  
 }
+.Tittle {
+  font-family: 'Open Sans', sans-serif; 
+  font-weight: 700; 
+  font-size: 28px;
+  text-align: center;
+  padding: 3% 10%;
+}
 
+.Nos {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: 700; 
+  font size 16px; 
+  text-align: center;
+  padding:10px 5px
+  
+}
+.Profesores {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-top: 100px;
+}
+
+.Profe {
+flex:0 0 calc(33.33%-10px);
+margin-bottom: 20px;
+padding: 10px;
+box-sizing: border-box;
+border-radius: 1px  #ddd;
+text-align: center;
+}
+
+.Profe img {
+max-width: 100%;
+height: 300px; ; 
+}
+
+.img {
+width: 50%;
+box-shadow: 6px 6px 25px whitesmoke;
+transition: all 2s linear;
+
+}
+img:hover {
+  width: 70%;
+  border-radius: 10%;
+  filter:brightness(100%);
+  box-shadow: -12px --12px 12px gray;
+  filter: sepia(40%);
+}
 .comentario-card {
     background-color: #f5f5f5;
     padding: 10px;
