--- a/css/sedes.css
+++ b/css/sedes.css
@@ -1,6 +1,6 @@
 body {
-    background-color: #d5e7f3; 
-    color: #1e0d5e; 
+    background-color: #882020; 
+    color:#fff9f9;  
 }
 .header-container h1 {
     font-family: 'Open Sans', sans-serif; 
