--- a/css/contacto.css
+++ b/css/contacto.css
@@ -1,6 +1,6 @@
 body {
-    background-color: #d5e7f3; 
-    color: #1e0d5e;  
+    background-color: #882020; 
+    color:#fff9f9;  
     margin: 0;
     padding: 40px;
     display: flex;
@@ -8,6 +8,7 @@ body {
     align-items: center;
     height: 100vh;
 }
+
 #idheader {
     width: 100%; 
     background-color: #000; 
@@ -57,27 +58,19 @@ form label {
     text-align: center; 
 }
 
-    .motivational-quote {
+.motivational-quote {
         font-family: 'Georgia', serif; 
         font-size: 20px; 
         color: #fff; 
         text-align: center; 
         margin-top: 70px;
-    }
+}
+
 button[type="submit"]:hover, input[type="reset"]:hover {
     background-color: #444;
     margin-top: 10px;
 }
 
-.warnings {
-    width: 200px;
-    text-align: center;
-    margin: auto;
-    color: rgb(187, 61, 61);
-    font-size: 20px;
-    margin-top: 5px;
-    padding-top: 20px;
-}
 
 input:invalid{
     border: 1px dashed rgb(187, 61, 61);
