--- a/css/home.css
+++ b/css/home.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css');
+
 
 * {
     margin: 0; padding: 0;
@@ -9,8 +11,8 @@
 }
 
 html, body {
-    background-color: #d5e7f3; 
-    color: #1e0d5e; 
+    background-color: #882020; 
+    color:#fff9f9;   
     margin: 0;
     padding: 0;
 }
@@ -18,29 +20,50 @@ html, body {
 main {
     padding: 20px;
 }
+
+h1 {
+    font-family: 'Open Sans', sans-serif; 
+    font-weight: 700; 
+    font-size: 28px;
+    text-align: center;
+    padding: 3% 10%;
+}
+.foto_inicial {
+    display: flex;
+    flex-wrap: wrap;
+    width: fit-content;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin:auto;
+}
+
 .video {
-    width: 100%;
+    margin: 0 auto;
+    width: 70%;
     height: 400px;
+    display: block;
+
 }
 
 .why-choose-us {
     padding: 20px;
 }
-.Titulo {
+.titulo {
     font-family: 'Open Sans', sans-serif; 
     font-weight: 700; 
     font-size: 28px;
     text-align: center;
 }
-.Párrafo {
+.párrafo {
     font-family: Georgia;
     font-weight: 600;
-    font size 16px; 
+    font-size: 16px; 
     text-align: center;
     padding: 5% 10%;
     
 }
-.Beneficios1{
+.beneficios1{
     padding: 1rem;
     list-style: circle;
     display: flex;
@@ -61,7 +84,7 @@ main {
     border-radius: 5px;
     transition: all;
 }
-.Beneficios2 {
+.beneficios2 {
     list-style: circle;
     padding: 1 rem;
     display: flex;
@@ -77,19 +100,24 @@ main {
     display: block;
     border-radius: 5px;
 }
-  .redsoc {
+.redsoc {
       width: 20 em;
       height: 20 em;
       background-color: none;
-  }
+}
+
 .B1:hover {
  -webkit-transform:scale(1.3);
- transform:scale(1.3);}
+ transform:scale(1.3);
+}
 
- .B2:hover {
+.B2:hover {
     -webkit-transform:scale(1.3);
-    transform:scale(1.3);}
-.B1,.B2 {overflow:hidden;}
+    transform:scale(1.3);
+}
+.B1,.B2 {
+    overflow:hidden;
+}
 
 
 
