--- a/css/nosotros.css
+++ b/css/nosotros.css
@@ -1,8 +1,9 @@
 body {
-  background-color: #d5e7f3; 
-  color: #1e0d5e;  
+  background-color: #882020; 
+  color:#fff9f9;  
 }
-.Tittle {
+
+.tittle {
   font-family: 'Open Sans', sans-serif; 
   font-weight: 700; 
   font-size: 28px;
@@ -10,22 +11,26 @@ body {
   padding: 3% 10%;
 }
 
-.Nos {
+.nos {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-weight: 700; 
-  font size 16px; 
+  font-size: 16px; 
   text-align: center;
   padding:10px 5px
   
 }
-.Profesores {
+.profesores {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   margin-top: 100px;
 }
 
-.Profe {
+.welcome {
+  background-color: none;
+  
+}
+.profe {
 flex:0 0 calc(33.33%-10px);
 margin-bottom: 20px;
 padding: 10px;
@@ -34,7 +39,7 @@ border-radius: 1px  #ddd;
 text-align: center;
 }
 
-.Profe img {
+.profe img {
 max-width: 100%;
 height: 300px; ; 
 }
@@ -53,23 +58,33 @@ img:hover {
   filter: sepia(40%);
 }
 .comentario-card {
-    background-color: #f5f5f5;
+    background-color: #c77474;
     padding: 10px;
     border: 1px solid #ddd;
     margin: 10px;
     border-radius: 5px;
-  }
+}
   
-  .comentador-name {
+.comentador-name {
     font-size: 18px;
     font-weight: bold;
-  }
+    text-align: center;
+}
   
-  .comentario-text {
+.comentario-text {
     font-size: 16px;
-    color: #1e0d5e; 
-  }
+    color: #fff9f9;
+    text-align: center;  
+}
   
-  .comentario-timestamp {
+.comentario-timestamp {
     color: #888;
-  }
+}
+
+.comentador-picture {
+  border-radius: 20px;
+  margin: 0 auto;
+  display: block;;
+}
+
+  
