--- a/css/sedes.css
+++ b/css/sedes.css
@@ -10,8 +10,92 @@ body {
     text-transform: uppercase;
     text-align: center;
 }
+/* barra de nav responsive acá */
+.cajaNav{
+    font-family: sans-serif;
+    display:flex;
+    justify-content: space-between;
+    background:var(--fnd);
+    color: var(--color);
+ }
+ .cajaNav .nav-bar{
+    margin:0 10px 0 0;
+ }
+ .cajaNav .titNav{
+    display:flex;
+    justify-content:space-between;
+    align-items:center;
+    flex: 1;
+    background:var(--fnd);
+    color:var(--color);
+    height:auto;
+ }
+ .cajaNav .titNav .toggle{
+    display:none;
+ }
+ 
+ .cajaNav {
+    display:flex;
+    list-style:none;
+    align-items: center;
+    padding:0;
+ }
+ .cajaNav .nav-bar li{
+    display:flex;
+    align-items:center;
+    padding: 0 20px ;
+    height:100%;
+ }
+ .cajaNav .nav-bar li:hover{
+    background: var(--color);
+    color:var(--fnd);
+    cursor: pointer;
+ }
+ .cajaNav .nav-bar li a{
+    text-decoration: none;
+    cursor: pointer;
+    color:inherit;
+ }
 
-.grid-container {
+/* barra termina acá */
+
+/* aca pongo la barra de nav para pantallas mas chicas */
+@media (max-width: 576px){
+    .cajaNav{
+       flex-direction: column;
+       align-items:flex-end;
+       background: unset;
+    }
+    .cajaNav .nav-bar{
+        color: #f5f2f2;
+        background-color: rgb(56, 54, 54);
+        flex-direction:column;
+        display:none;
+    } 
+    .cajaNav .nav-bar li {
+       padding: 10px 20px;
+    }
+    .cajaNav .nav-bar li:hover{
+       background: var(--fnd);
+       color: var(--color);
+    } 
+    .cajaNav .titNav{
+       width: 100%;
+       align-items:center;
+    }
+    .cajaNav .titNav .toggle{
+       display:block;
+       margin-right:10px;
+       cursor:pointer
+    } 
+    .abierto{display:flex !important}
+    .cerrado{display:none !important}
+    }
+
+    /* termina aca lo de la barra */
+
+
+    .grid-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 20px;
@@ -19,7 +103,7 @@ body {
 }
 
 .cuadrito {
-    background-color: rgb(56, 54, 54);
+    background-color: rgb(14, 13, 13);
     color: rgb(248, 245, 245);
     border: 2px solid aliceblue;
     padding: 10px;
