--- a/css/home.css
+++ b/css/home.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css');
-
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap");
 
 * {
     margin: 0; padding: 0;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: 'Poppins', sans-serif;;
     outline: none; border: none;
     text-decoration: none;
     text-transform: capitalize;
@@ -22,7 +22,7 @@ main {
 }
 
 h1 {
-    font-family: 'Open Sans', sans-serif; 
+    font-family: 'Poppins', sans-serif; 
     font-weight: 700; 
     font-size: 28px;
     text-align: center;
