--- a/css/home.css
+++ b/css/home.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css');
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap");
-
+@import url('https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@300&display=swap');
 * {
     margin: 0; padding: 0;
-    font-family: 'Poppins', sans-serif;;
+    font-family: 'Frank Ruhl Libre', serif;
     outline: none; border: none;
     text-decoration: none;
     text-transform: capitalize;
@@ -22,7 +22,7 @@ main {
 }
 
 h1 {
-    font-family: 'Poppins', sans-serif; 
+    font-family: 'Frank Ruhl Libre', serif; 
     font-weight: 700; 
     font-size: 28px;
     text-align: center;
@@ -47,7 +47,7 @@ h1 {
     padding: 20px;
 }
 .titulo {
-    font-family: 'Open Sans', sans-serif; 
+    font-family: 'Frank Ruhl Libre', serif; 
     font-weight: 700; 
     font-size: 28px;
     text-align: center;
