--- a/css/sedes.css
+++ b/css/sedes.css
@@ -1,9 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@300&display=swap');
+
 body {
     background-color: #882020; 
     color:#fff9f9;  
 }
 .header-container h1 {
-    font-family: 'Open Sans', sans-serif; 
+   font-family: 'Frank Ruhl Libre', serif; 
     font-weight: 700; 
     font-size: 28px;
     margin: 0;
@@ -103,13 +105,13 @@ body {
 }
 
 .cuadrito {
+   font-family: 'Frank Ruhl Libre', serif;
     background-color: rgb(14, 13, 13);
     color: rgb(248, 245, 245);
     border: 2px solid aliceblue;
     padding: 10px;
-    text-align: center;
-    font-family: 'Open Sans', sans-serif; 
-    }
+    text-align: center; 
+   }
 
 
 .boximg {
