Cambios index img

--- a/css/home.css
+++ b/css/home.css
@@ -76,15 +76,15 @@ h1 {
 .B1 {
     width: 50%;
     height: 200px;
-    margin-bottom: 10px;
+    margin-bottom: 8px;
     margin: auto;
     display: block;
     border-radius: 5px;
-    transition: all;
+    ;
 }
 .beneficios2 {
     list-style: circle;
-    padding: 1 rem;
+    padding: 1rem;
     display: flex;
     gap: 2rem;
     text-align: left ;
@@ -104,18 +104,8 @@ h1 {
       background-color: none;
 }
 
-.B1:hover {
- -webkit-transform:scale(1.3);
- transform:scale(1.3);
-}
 
-.B2:hover {
-    -webkit-transform:scale(1.3);
-    transform:scale(1.3);
-}
-.B1,.B2 {
-    overflow:hidden;
-}
+
 
 
 
