--- a/css/contacto.css
+++ b/css/contacto.css
@@ -64,6 +64,7 @@ form label {
         color: #fff; 
         text-align: center; 
         margin-top: 70px;
+        margin-bottom: 90px;
 }
 
 button[type="submit"]:hover, input[type="reset"]:hover {
